Fri Mar 30 04:23:23 UTC 2012  Manjula Peiris  <tmpeiris at cs dot iupui dot edu>

        * cuts/unite/dmac/Dmac_Log_Format.h:
        * cuts/unite/dmac/Dmac_Log_Format.cpp:
        * cuts/unite/dmac/Dmac_Log_Format_Graph.h:
        * cuts/unite/dmac/Dmac_Log_Format_Graph.cpp:
        * cuts/unite/dmac/Dmac_Log_Format_Graph_Builder.h:
        * cuts/unite/dmac/Dmac_Log_Format_Graph_Builder.cpp:
        * cuts/unite/dmac/Dmac_Relation.h:
        * cuts/unite/dmac/Dmac_Utils.h:
        * cuts/unite/dmac/Dmac_Utils.cpp:

          Added the functionality for finding the co-occurrence log formats
          in different Execution Contexts. Finding the dependency direction
          is remaining.

Tue Mar 27 19:56:41 UTC 2012  Manjula Peiris  <tmpeiris at cs dot iupui dot edu>

        * cuts/workers/CPU/CPU_Worker_T.cpp:

          Chnaged to have default calibration parameters.

Tue Mar 27 19:48:14 UTC 2012  Manjula Peiris  <tmpeiris at cs dot iupui dot edu>

        * cuts/utils/calibrate/calibrate.cpp:
        * cuts/workers/CPU/CPU_Worker_T.h:
        * cuts/workers/CPU/CPU_Worker_T.cpp:

          Fixed the issue, where the calibration app was crashing in windows
          after the calibration process.

Tue Mar 27 15:25:48 UTC 2012  James H. Hill  <hillj at cs dot iupui dot edu>

        * performance-tests/iccm/components/Tput_Sender_Conn_Component/Tput_Sender_Conn_Component_impl.cpp:

          BUGFIX: The component crashed in ccm_passivate () if there was
          no task allocated to send events.

        * performance-tests/iccm/connector/Performance_Test_Connector.mpc:

          Change the name of the connector implementation project and binary.

        * performance-tests/iccm/descriptors/Tput_S1R1_8.cdp:

          Re-generated the deployment descriptors.

        * performance-tests/iccm/models/PerformanceTest.xme:

          Added connector and connector components to the model.
