@@ -1,3 +1,13 @@
+Mon Apr  2 16:25:47 UTC 2012  Manjula Peiris  <tmpeiris at cs dot iupui dot edu>
+
+        * cuts/unite/dmac/Dmac_Log_Format_Graph.h:
+        * cuts/unite/dmac/Dmac_Log_Format_Graph.cpp:
+        * cuts/unite/dmac/Dmac_Utils.h:
+        * cuts/unite/dmac/Dmac_Utils.cpp:
+
+          Added the support for comapring time at seconds.microseconds
+          level.
+
 Fri Mar 30 04:23:23 UTC 2012  Manjula Peiris  <tmpeiris at cs dot iupui dot edu>
 
         * cuts/unite/dmac/Dmac_Log_Format.h:
